<?xml version="1.0"?>
<package format="2">
  <name>generic_gazebo_thruster_plugins</name>
  <version>0.0.0</version>
  <description>Provides force and torque thruster plugins for use with Gazebo sim + ROS</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export>
  </export>
</package>
